# amp

./: .gitignore  README.md  __init__.py  analysis.py  bitbucket-pipelines.yml  model.f90  parallel.py  setup.py  utilities.py
amp/: Makefile  __init__.py  __version__.py  analysis.py  convert.py  io.py  model.f90  utilities.py
amp/descriptor/: analysis.py  bispectrum.f90  bispectrum.py  botu.py  cutoffs.f90  cutoffs.py  example.py  gaussian.f90  gaussian.py  zernike.f90  (+1 more)
descriptor/: __init__.py  analysis.py  behler.py  bispectrum.py  cutoffs.py  example.py  gaussian.f90  gaussian.py  gaussians.py  zernike.f90  zernike.py
docs/: analysis.rst  bootstrap.rst  building.rst  community.rst  conf.py  credits.rst  databases.rst  develop.rst  examplescripts.rst  fastforcecalls.rst  gaussian.rst  index.rst  installation.rst  introduction.rst  moleculardynamics.rst  moredescriptor.rst  moremodel.rst  nearsightedforcetraining.rst  neuralnetwork.rst  releasenotes.rst  tensorflow.rst  theory.rst  useamp.rst
model/: __init__.py  __main__.py  neuralnetwork.f90  neuralnetwork.py  tfAmpNN.py  tfAmpNN.py~
regression/: __init__.py  image_fp_dump_20.pkl  tensorflow_train.py  tfAmpNN.py  tfAmpNN_test.py
tests/: fingerprintonly.py  test-NN-nodeplot.py  test_NN_nodeplot.py  test_gaussian_krr.py  test_gaussian_neural.py  test_gaussian_neural_g5.py  test_gaussian_tfAmpNN.py  test_gaussian_tflow.py
tools/: amp-compress  amp-plotconvergence
tools/amp-kim/amp_model_driver/: CMakeLists.txt  Makefile  amp_model_driver.F90
tools/amp-kim/amp_parameterized_model/: CMakeLists.txt  Makefile
(+27 files in other folders)
